improved base path for loading assets

--- a/_demo/demo.html
+++ b/_demo/demo.html
@@ -10,6 +10,11 @@
 <body>
 
     <script src="../js/sokoban.js"></script>
+	
+	<script>
+		// only for demo couse imgs are not in /img
+		this.mydir = this.mydir + "../";
+	</script>
 
     <script>  
         window.onload = function () {
