--- a/_demo/demo.html
+++ b/_demo/demo.html
@@ -12,7 +12,7 @@
     <script src="../js/sokoban.js"></script>
 	
 	<script>
-		// only for demo couse imgs are not in /img
+		// only for demo because imgs are not in /img
 		this.mydir = this.mydir + "../";
 	</script>
 
